add Title Dynamic

--- a/services.html
+++ b/services.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="utf-8">
     <meta http-equiv="x-ua-compatible" content="ie=edge">
-    <title>Personal HTML-5 Template </title>
+    <title>Services | Dileep Kushwaha</title>
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="manifest" href="site.webmanifest">
@@ -48,7 +48,8 @@
                             <div class="logo">
                                 <!-- <a href="index.html"><img src="assets/img/logo/logo.png" alt=""></a> -->
                                 <h3 data-animation="fadeInUp" data-delay=".6s" class="" style="animation-delay: 0.6s;">
-                                    Dileep Kushwaha</h3>
+                                    <a href="index.html" class="hover-link">Dileep Kushwaha</a>
+                                </h3>
                             </div>
                         </div>
                         <div class="col-xl-10 col-lg-10 col-md-10">
@@ -60,6 +61,7 @@
                                             <li><a href="index.html">Home</a></li>
                                             <li><a href="about.html">About</a></li>
                                             <li><a href="services.html">Services</a></li>
+                                            <li><a href="skills.html">Skills</a></li>
                                             <li><a href="portfolio.html">Portfolio</a></li>
                                             <li><a href="#">Page</a>
                                                 <ul class="submenu">
@@ -279,7 +281,7 @@
                                     <a href="mailto:dileepkushwaha8090@gmail.com"
                                         style="color: white; text-decoration: none;">dileepkushwaha8090@gmail.com</a>
                                 </h4>
-                                <p>Nagod Satna Madhya Pradesh India</p>
+                                <p>485446,Nagod Satna Madhya Pradesh India</p>
 
                             </div>
                         </div>
@@ -290,21 +292,34 @@
                         <div class="col-xl-9 col-lg-8">
                             <div class="footer-copy-right">
                                 <p>
-                                    Copyright &copy;
+                                    &copy;
                                     <script>document.write(new Date().getFullYear());</script> All rights reserved |
-                                    This template is made by <a href="#" target="_blank">Dileep Kushwaha</a>
+                                    Designed and Developed by <a href="#" target="_blank"
+                                        rel="noopener noreferrer">Dileep Kushwaha</a>
                                 </p>
+
                             </div>
+
                         </div>
                         <div class="col-xl-3 col-lg-4">
                             <!-- Footer Social -->
                             <div class="footer-social f-right">
                                 <a>Stay Connected</a>
-                                <a href="#"><i class="fab fa-twitter"></i></a>
-                                <a href="#"><i class="fab fa-facebook-f"></i></a>
-                                <a href="#"><i class="fas fa-globe"></i></a>
-                                <a href="#"><i class="fab fa-instagram"></i></a>
+                                <!-- Twitter Icon -->
+                                <a href="javascript:void(0)"><i class="fab fa-twitter"></i></a>
+
+                                <a href="https://www.instagram.com/dileep0xkush/" target="_blank"><i
+                                        class="fab fa-instagram"></i></a>
+                                <!-- LinkedIn Icon -->
+                                <a href="https://www.linkedin.com/in/dileep-kushwaha-6457711a5/" target="_blank"><i
+                                        class="fab fa-linkedin"></i></a>
+                                <!-- GitHub Icon -->
+                                <a href="https://github.com/dileep0xKush" target="_blank"><i
+                                        class="fab fa-github"></i></a>
+                                <a href="https://wa.me/8357892218" target="_blank"><i class="fab fa-whatsapp"></i></a>
+
                             </div>
+
                         </div>
                     </div>
                 </div>
