--- a/index.html
+++ b/index.html
@@ -63,14 +63,14 @@
                                             <li><a href="services.html">Services</a></li>
                                             <li><a href="skills.html">Skills</a></li>
                                             <li><a href="portfolio.html">Portfolio</a></li>
-                                            <li><a href="#">Page</a>
+                                            <!-- <li><a href="#">Page</a>
                                                 <ul class="submenu">
                                                     <li><a href="blog.html">Blog</a></li>
                                                     <li><a href="blog_details.html">Blog Details</a></li>
                                                     <li><a href="elements.html">Element</a></li>
                                                     <li><a href="portfolio_details.html">Portfolio Details</a></li>
                                                 </ul>
-                                            </li>
+                                            </li> -->
                                             <li><a href="contact.html">Contact</a></li>
                                         </ul>
                                     </nav>
@@ -170,7 +170,8 @@
                     </div>
                     <div class="col-lg-5 offset-lg-1">
                         <div class="about-caption2">
-                            <h3>Any Type Of Query<br> & Discussion.</h3>
+                            <h3>Have a Question or Need to Discuss a Project?
+                            </h3>
                             <p>Late talk with me</p>
                             <div class="send-cv">
                                 <a href="mailto:dileepkushwaha8090@gmail.com"
@@ -236,7 +237,14 @@
                                 </div>
                             </div>
                         </a>
+
                     </div>
+                    <div class="col-12" style="text-align: center; margin-bottom: 30px;">
+                        <a href="services.html" class="btn btn-black">
+                            See More
+                        </a>
+                    </div>
+
                 </div>
             </div>
         </section>
@@ -382,15 +390,53 @@
                                     <div class="blog-inner">
                                         <div class="blog-top">
                                             <div class="person-img">
-                                                <img src="assets/img/gallery/blog1.png" alt="">
+                                                <img src="assets/img/gallery/blog2.png" alt="">
                                             </div>
                                             <div class="comment-person">
-                                                <h2>Bradley Erickson</h2>
-                                                <span>UI/UX Designer</span>
+                                                <h2>Suneel Ahirwar</h2>
+                                                <span>Founder Of Sk Dream Cash</span>
                                             </div>
                                         </div>
-                                        <p>Consectetur adipisicing elit, seddosdoe eiusmod tempor incididunt utore
-                                            etstes dolore magna aliqua. Ut imminim restai veniam, quis nostrud.</p>
+                                        <p>Thanks to Dileep Kushwaha, our website is now user-friendly and delivers
+                                            outstanding results. Their web development expertise took our online
+                                            presence to the next level!</p>
+                                    </div>
+                                </div>
+                            </div>
+                            <!-- single-items -->
+                            <div class="col-xl-4">
+                                <div class="blog-wrapper">
+                                    <div class="blog-inner">
+                                        <div class="blog-top">
+                                            <div class="person-img">
+                                                <img src="assets/img/gallery/blog2.png" alt="">
+                                            </div>
+                                            <div class="comment-person">
+                                                <h2>Pradeep Maruya</h2>
+                                                <span>Founder Of Cipher Web Infotech</span>
+                                            </div>
+                                        </div>
+                                        <p>Thanks to Dileep Kushwaha, we now have a modern, responsive website that
+                                            perfectly represents our brand. His expertise in web development is
+                                            top-notch!</p>
+                                    </div>
+                                </div>
+                            </div>
+                            <!-- single-items -->
+                            <div class="col-xl-4">
+                                <div class="blog-wrapper">
+                                    <div class="blog-inner">
+                                        <div class="blog-top">
+                                            <div class="person-img">
+                                                <img src="assets/img/gallery/blog2.png" alt="">
+                                            </div>
+                                            <div class="comment-person">
+                                                <h2>Dinkar Singh</h2>
+                                                <span>Co-Founder of Coding Community</span>
+                                            </div>
+                                        </div>
+                                        <p>Dileep's attention to detail and commitment to quality have helped our
+                                            website perform better than we imagined. Highly recommend his services!</p>
                                     </div>
                                 </div>
                             </div>
@@ -404,47 +450,13 @@
                                             </div>
                                             <div class="comment-person">
                                                 <h2>Bradley Erickson</h2>
-                                                <span>UI/UX Designer</span>
+                                                <span>Freelance Manager</span>
                                             </div>
                                         </div>
-                                        <p>Consectetur adipisicing elit, seddosdoe eiusmod tempor incididunt utore
-                                            etstes dolore magna aliqua. Ut imminim restai veniam, quis nostrud.</p>
-                                    </div>
-                                </div>
-                            </div>
-                            <!-- single-items -->
-                            <div class="col-xl-4">
-                                <div class="blog-wrapper">
-                                    <div class="blog-inner">
-                                        <div class="blog-top">
-                                            <div class="person-img">
-                                                <img src="assets/img/gallery/blog3.png" alt="">
-                                            </div>
-                                            <div class="comment-person">
-                                                <h2>Bradley Erickson</h2>
-                                                <span>UI/UX Designer</span>
-                                            </div>
-                                        </div>
-                                        <p>Consectetur adipisicing elit, seddosdoe eiusmod tempor incididunt utore
-                                            etstes dolore magna aliqua. Ut imminim restai veniam, quis nostrud.</p>
-                                    </div>
-                                </div>
-                            </div>
-                            <!-- single-items -->
-                            <div class="col-xl-4">
-                                <div class="blog-wrapper">
-                                    <div class="blog-inner">
-                                        <div class="blog-top">
-                                            <div class="person-img">
-                                                <img src="assets/img/gallery/blog2.png" alt="">
-                                            </div>
-                                            <div class="comment-person">
-                                                <h2>Bradley Erickson</h2>
-                                                <span>UI/UX Designer</span>
-                                            </div>
-                                        </div>
-                                        <p>Consectetur adipisicing elit, seddosdoe eiusmod tempor incididunt utore
-                                            etstes dolore magna aliqua. Ut imminim restai veniam, quis nostrud.</p>
+                                        <p>Dileep delivered a website that works seamlessly on all devices. We’re seeing
+                                            higher user engagement and faster and smooth load times, thanks to his
+                                            expert work
+                                            !</p>
                                     </div>
                                 </div>
                             </div>
@@ -456,7 +468,16 @@
         </section>
         <!-- Brand Area Start -->
         <div class="brand-area section-padding30">
+
             <div class="container">
+                <div class="row">
+                    <div class="col-xl-6 col-lg-8 col-md-10">
+                        <!-- Section Tittle -->
+                        <div class="section-tittle mb-70">
+                            <h2>Professional Journey: Full-Time & Freelance</h2>
+                        </div>
+                    </div>
+                </div>
                 <div class="brand-active brand-border pt-50 pb-40">
                     <div class="single-brand" style="position: relative; display: inline-block;">
                         <div class="brand-overlay" style="position: relative;">
