fix image  issue on index

--- a/index.html
+++ b/index.html
@@ -110,12 +110,7 @@
                                         that enhance user experience and drive business growth.
                                     </P>
                                     <!-- Hero-btn -->
-                                    <div class="hero__btn">
-                                        <a href="javascript:void(0)" class="btn hero-btn" data-animation="fadeInLeft"
-                                            data-delay=".8s" onclick="downloadCV()">Download CV</a>
-                                        <a href="javascript:void(0)" class="btn border-btn ml-15"
-                                            data-animation="fadeInRight" data-delay="1.0s">Hire Me</a>
-                                    </div>
+
                                 </div>
                             </div>
                         </div>
@@ -140,7 +135,7 @@
                                     <div class="hero__btn">
                                         <a href="javascript:void(0)" class="btn hero-btn" data-animation="fadeInLeft"
                                             data-delay=".8s" onclick="downloadCV()">Download CV</a>
-                                        <a href="industries.html" class="btn border-btn ml-15"
+                                        <a href="javascript:void(0)" class="btn border-btn ml-15"
                                             data-animation="fadeInRight" data-delay="1.0s">Hire Me</a>
                                     </div>
                                 </div>
@@ -175,7 +170,7 @@
                             <p>Late talk with me</p>
                             <div class="send-cv">
                                 <a href="mailto:dileepkushwaha8090@gmail.com"
-                                    style="font-size: 22px">dileepkushwaha8090@gmail.com</a>
+                                    style="color: blue;font-size: 20px;">dileepkushwaha8090@gmail.com</a>
                             </div>
                         </div>
                     </div>
@@ -610,7 +605,7 @@
                                 <span><a href="javascript:void(0)">Dileep Kushwaha</a></span>
                                 <h4 style="color: white;">
                                     <a href="mailto:dileepkushwaha8090@gmail.com"
-                                        style="color: white; text-decoration: none;">dileepkushwaha8090@gmail.com</a>
+                                        style="color: blue;font-size: 20px;">dileepkushwaha8090@gmail.com</a>
                                 </h4>
                                 <p>485446,Nagod Satna Madhya Pradesh India</p>
 
