--- a/index.html
+++ b/index.html
@@ -264,11 +264,120 @@
         <!-- Want To Work End -->
 
 
+        <!-- project  -->
+
+        <!-- Services Area Start -->
+        <section class="services-area  services-padding">
+            <div class="container">
+                <div class="project-heading mb-35">
+                    <div class="row align-items-end">
+                        <div class="col-lg-6">
+                            <!-- Section Tittle -->
+                            <div class="section-tittle">
+                                <h2>Our Recent Project: </h2>
+                            </div>
+                        </div>
+
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="col-12">
+                        <!-- Nav Card -->
+                        <div class="tab-content active" id="nav-tabContent">
+                            <!-- card ONE -->
+                            <div class="tab-pane fade active show" id="nav-home" role="tabpanel"
+                                aria-labelledby="nav-home-tab">
+                                <div class="services-caption">
+                                    <div class="row">
+
+                                        <div class="col-lg-4 col-md-4 col-sm-4">
+                                            <div class="row">
+                                                <div class="col-lg-12">
+                                                    <!-- Single Project -->
+                                                    <div class="single-services mb-30" style="position: relative;">
+                                                        <div class="image-container"
+                                                            style="position: relative; width: 370px; height: 370px;">
+
+                                                            <img src="assets/img/project/auxilionetwork.png"
+                                                                style="width: 100%; height: 100%;"
+                                                                style="border: 2px solid #000;" alt="Project Image">
+
+                                                            <a href="https://auxilionetwork.com" class="view-button"
+                                                                target="_blank">
+                                                                View
+                                                            </a>
+                                                        </div>
+                                                    </div>
+                                                </div>
+                                            </div>
+                                        </div>
+
+
+                                        <div class="col-lg-4 col-md-4 col-sm-4">
+                                            <div class="row">
+                                                <div class="col-lg-12">
+                                                    <!-- Single Project -->
+                                                    <div class="single-services mb-30" style="position: relative;">
+                                                        <div class="image-container"
+                                                            style="position: relative; width: 370px; height: 370px;">
+
+                                                            <img src="assets/img/project/portbot.png"
+                                                                style="width: 100%; height: 100%;"
+                                                                style="border: 2px solid #000;" alt="Project Image">
+
+                                                            <a href="https://portboard.net" class="view-button"
+                                                                target="_blank">
+                                                                View
+                                                            </a>
+                                                        </div>
+                                                    </div>
+                                                </div>
+                                            </div>
+                                        </div>
+                                        <div class="col-lg-4 col-md-4 col-sm-4">
+                                            <div class="row">
+                                                <div class="col-lg-12">
+                                                    <!-- Single Project -->
+                                                    <div class="single-services mb-30" style="position: relative;">
+                                                        <div class="image-container"
+                                                            style="position: relative; width: 370px; height: 370px;">
+
+                                                            <img src="assets/img/project/mipaquete.png"
+                                                                style="width: 100%; height: 100%;"
+                                                                style="border: 2px solid #000;" alt="Project Image">
+
+                                                            <a href="https://mipaquete.net" class="view-button"
+                                                                target="_blank">
+                                                                View
+                                                            </a>
+                                                        </div>
+                                                    </div>
+                                                </div>
+                                            </div>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+
+                        </div>
+                        <!-- See More Button -->
+                        <div class="col-12" style="text-align: center; margin-top: 30px;">
+                            <a href="portfolio.html" class="btn btn-black">
+                                See More
+                            </a>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
+        <!-- Services Area End -->
+        <!-- end project  -->
+
         <!-- skills -->
 
 
         <!-- client-comments -->
-        <section class="client-comments section-paddingt30">
+        <section class="client-comments">
             <div class="container">
                 <div class="row">
                     <div class="col-xl-6 col-lg-8 col-md-10">
@@ -358,10 +467,7 @@
             <!-- End latest-blog-area -->
         </section>
 
-
-
         <!-- end skills  -->
-
         <!-- client-comments -->
         <section class="client-comments section-paddingt30">
             <div class="container">
@@ -476,7 +582,7 @@
                 <div class="brand-active brand-border pt-50 pb-40">
                     <div class="single-brand" style="position: relative; display: inline-block;">
                         <div class="brand-overlay" style="position: relative;">
-                            <img src="assets/img/aviansoft.png" alt="Aviansoft" width="200px"
+                            <img src="assets/img/aviansoft.png" alt="Aviansoft" width="150px"
                                 style="transition: transform 0.3s ease;" />
                             <div class="brand-name" style="
                                 position: absolute; bottom: 10px; left: 0; width: 100%;
@@ -490,7 +596,7 @@
 
                     <div class="single-brand" style="position: relative; display: inline-block;">
                         <div class="brand-overlay" style="position: relative;">
-                            <img src="assets/img/skyline.jpeg" alt="Skyline" width="200px"
+                            <img src="assets/img/skyline.jpeg" alt="Skyline" width="150px"
                                 style="transition: transform 0.3s ease;" />
                             <div class="brand-name" style="
                                 position: absolute; bottom: 10px; left: 0; width: 100%;
@@ -605,7 +711,7 @@
                                 <span><a href="javascript:void(0)">Dileep Kushwaha</a></span>
                                 <h4 style="color: white;">
                                     <a href="mailto:dileepkushwaha8090@gmail.com"
-                                        style="color: blue;font-size: 20px;">dileepkushwaha8090@gmail.com</a>
+                                        style="color: white;font-size: 20px;">dileepkushwaha8090@gmail.com</a>
                                 </h4>
                                 <p>485446,Nagod Satna Madhya Pradesh India</p>
 
@@ -670,6 +776,24 @@
             document.body.removeChild(link);
         }
     </script>
+
+    <script>
+        // Event listener for hover to show/hide the "View" button
+        document.querySelectorAll('.image-container').forEach(container => {
+            container.addEventListener('mouseenter', function () {
+                const viewButton = this.querySelector('.view-button');
+                viewButton.style.display = 'inline-block';
+                viewButton.style.opacity = '1';
+            });
+
+            container.addEventListener('mouseleave', function () {
+                const viewButton = this.querySelector('.view-button');
+                viewButton.style.display = 'none';
+                viewButton.style.opacity = '0';
+            });
+        });
+    </script>
+
     <!-- JS here -->
     <!-- All JS Custom Plugins Link Here here -->
     <script src="./assets/js/vendor/modernizr-3.5.0.min.js"></script>
